<resources>
    <string name="app_name">TrackNews</string>

    <!--UI-->
    <string name="uiMenu">Menu</string>
    <string name="uiAppName">App name</string>
    <string name="uiSavedSearchActive">Active saved search</string>
    <string name="uiSavedSearches">Saved searches</string>
    <string name="uiSaveNews">Save this news</string>
    <string name="uiUnSaveNews">Delete this news from the saved</string>

    <!--Instruction-->
    <string name="instructionCancel">Skip tutorial</string>
    <string name="instructionFinish">Finish tutorial</string>
    <string name="instructionStart">Tutorial</string>
    <string name="instructionUnHideSearch">Click to find news</string>
    <string name="instructionEditText">Enter a search term</string>
    <string name="instructionGo">Start your search</string>
    <string name="instructionSaveSearch">Save your search. The program will notify you if it finds something.</string>
    <string name="instructionSavedSearch">All saved searches are stored here.</string>
    <string name="instructionDeviceOk">OK</string>
    <string name="instructionDevice"><b>Attention!</b>\n\n
        On some devices of Xiaomi, OPPO, Huawei and others, due to hard power saving settings, the application may become unstable.\n\n
        For the fully work of the application, do:\n
        <b>- enable autostart.</b>\n<i>path example</i>: Settings > Applications > All applications > select <b>the TrackNews</b> application > enable autostart\n
        <b>- and set the power mode.</b>\n<i>path example</i>: Settings > Battery > Activity control > select <b>the TrackNews</b> application > No restrictions</string>

    <string name="search">Search</string>
    <string name="defaultTextView">///</string>

    <!--messageLoadWebsite-->
    <string name="messageFindNews">Looking for news...</string>
    <string name="messageNoNews">No news</string>
    <string name="messageStatusEthernet">No Internet</string>

    <!--time/date-->
    <string name="timeToday">Today</string>
    <string name="timeYesterday">Yesterday</string>
    <string-array name="timeMonth">
        <item >January</item>
        <item >February</item>
        <item >March</item>
        <item >April</item>
        <item >May</item>
        <item >June</item>
        <item >July</item>
        <item >August</item>
        <item >September</item>
        <item >October</item>
        <item >November</item>
        <item >December</item>
    </string-array>

    <!--cardView-->
    <string name="newsItemTime">00:00</string>
    <string name="newsItemDayMonth">Jan 1</string>
    <string name="newsItemYear">2012</string>
    <string name="newsItemTitle">Title</string>
    <string name="newsItemContent">Content</string>
    <string name="newsItemLink">link</string>

    <!--tabLayout-->
    <string name="news_today">Today</string>
    <string name="news_week">Month</string>
    <string name="news_all">All</string>
    <string name="news_saved">Saved</string>

    <!--searchItem-->
    <string name="searchItemDelete">Delete all selected Item</string>
    <string name="searchItemCancel">Cancel</string>
    <string name="searchItemSave">This search has been saved</string>

    <!--theme-->
    <string name="theme_title">Themes:</string>
    <string name="light_theme">Dark theme</string>
    <string name="dark_theme">Light theme</string>
    <string name="system_theme">Use system theme</string>
    <string name="battery_saver_theme">Battery saver theme</string>

    <!--load Website\ProgressBar-->
    <string name="loadWebsiteFail">Website is not response. Check internet connection</string>

    <!--Exit App-->
    <string name="exitApp">Once again to exit!</string>
</resources>