<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WebsiteFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/Theme.BackgroundPrimary"
        android:layout_width="match_parent"

        android:layout_height="44dp"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:stateListAnimator="@null"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent"
            android:text="back"
            app:icon="?attr/actionModeCloseDrawable"
            app:iconGravity="top" />

        <TextView
            android:id="@+id/textViewProjectName"
            style="@style/Theme.BackgroundPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonUnSaveNews"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent"
            android:text="@string/uiSaveNews"
            app:icon="@drawable/ic_save_search"
            app:iconGravity="top" />

        <Button
            android:id="@+id/buttonSaveNews"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_transparent"
            android:text="@string/uiUnSaveNews"
            android:visibility="gone"
            app:icon="@drawable/ic_star_select"
            app:iconGravity="top" />

    </LinearLayout>

    <WebView
        android:id="@+id/fragWebsiteWebView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/fragWebsiteProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragWebsiteWebView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/fragWebsiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..."
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragWebsiteWebView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>