<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="100dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newsItemTextViewDate"
            style="@style/Theme.BackgroundPrimary"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/newsItemTime" />

        <TextView
            android:id="@+id/newsItemTextViewImg"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:background="#FAFAFA"
            android:gravity="center"
            android:text="Источник"
            android:visibility="gone"
            tools:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/Theme.BackgroundBase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/newsItemTextViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/newsItemTitle"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/newsItemTextViewContent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="1"
                            android:text="@string/newsItemContent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:rotation="180"
                            android:text="^"
                            android:textSize="20sp"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/newsItemTextViewLink"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/newsItemLink"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#D5D5D5"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                style="@style/Theme.BackgroundBase"
                android:id="@+id/newsItemButtonSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                app:icon="@drawable/ic_arrow_bottom"
                app:iconGravity="top"
                app:iconTint="@color/baseColorOnPrimary" />

            <Button
                style="@style/Theme.BackgroundSecondary"
                android:id="@+id/newsItemButtonExpand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_transparent"
                app:icon="@drawable/ic_arrow_bottom"
                app:iconGravity="top"
                app:iconTint="@color/baseColorOnPrimary" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>